tutorials/deploy-dependency-track/deploy/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dependency-track-frontend
  name: dependency-track-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dependency-track-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dependency-track-frontend
    spec:
      containers:
      - image: dependency-track-frontend
        name: dependency-track-frontend
        livenessProbe:
          httpGet:
            port: web
        readinessProbe:
          httpGet:
            port: web
        ports:
          - containerPort: 80
            name: web
        resources:
          limits:
            cpu: "2"
            memory: "512M"
          requests:
            cpu: "1"
            memory: "1024M"
