tutorials/deploy-dependency-track/deploy/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dependency-track-frontend-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: dependency-track-frontend
  ports:
  - port: 8080
    name: web
    protocol: TCP
    targetPort: 80
