tutorials/deploy-dependency-track/deploy/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dependency-track-frontend-ing
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "dependency-track-ip-ui"
    kubernetes.io/ingress.allow-http: "false"
    ingress.gcp.kubernetes.io/pre-shared-cert: "dependency-track-cert-ui"
spec:
  defaultBackend:
    service:
      name: dependency-track-frontend-svc
      port: 
        number: 8080
